Update from upstream

--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "subtree:server": "git subtree push --prefix dist/server origin subtree/server",
     "subtree": "npm run subtree:web && npm run subtree:server",
     "lint": "tslint 'src/**/!(*.spec|*.test).ts?(x)'",
-    "build:messages": "node src/messages/build-messages.js"
+    "build:messages": "node src/messages/build-messages.js",
+    "build:electron:dev": "webpack --env.action=build:electron:dev",
+    "watch:electron:dev": "webpack --watch --env.action=build:electron:dev",
+    "electron": "electron start-electron.js",
+    "start:electron": "sh scripts.sh start:electron"
   },
   "license": "MIT",
   "repository": {
@@ -30,7 +34,8 @@
     "url": "git+https://github.com/iamssen/seed.git"
   },
   "upstream": {
-    "git": "https://github.com/iamssen/seed.git"
+    "git": "https://github.com/iamssen/seed.git",
+    "hash": "631bfd78c6476d92d42d405cbc490b9ef38d6f93"
   },
   "bugs": {
     "url": "https://github.com/iamssen/seed/issues"
@@ -64,6 +69,7 @@
     "url-search-params-polyfill": "^2.0.0"
   },
   "devDependencies": {
+    "electron": "^1.7.9",
     "@types/autoprefixer": "^6.7.3",
     "@types/body-parser": "^1.16.8",
     "@types/browser-sync": "0.0.37",
