Fixed a problem where dynamic importing caused server html and client html rendering. (Create library ssenkit.router-store)

--- a/config.json
+++ b/config.json
@@ -33,11 +33,12 @@
   },
   "libs": {
     "entry": {
+      "ssenkit.dropdown-anchor": {},
       "ssenkit.autocomplete-text-input": {},
       "ssenkit.date-select": {},
-      "ssenkit.dropdown-anchor": {},
       "ssenkit.modal": {},
-      "ssenkit.restricted-text-input": {}
+      "ssenkit.restricted-text-input": {},
+      "ssenkit.router-store": {}
     }
   }
 }
