Add recontext library

--- a/config.json
+++ b/config.json
@@ -33,6 +33,7 @@
   },
   "libs": {
     "entry": {
+      "recontext": {},
       "ssenkit.dropdown-anchor": {},
       "ssenkit.autocomplete-text-input": {},
       "ssenkit.date-select": {},
