--- a/package.json
+++ b/package.json
@@ -39,56 +39,57 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
-    "core-js": "^2.5.3",
+    "core-js": "^2.5.5",
     "d3-array": "^1.2.0",
-    "d3-selection": "^1.2.0",
-    "express": "^4.16.2",
+    "d3-selection": "^1.3.0",
+    "express": "^4.16.3",
     "ie-shim": "^0.1.0",
+    "immer": "^1.2.1",
     "immutable": "4.0.0-rc.2",
     "js-cookie": "^2.2.0",
-    "mobx": "^3.4.1",
+    "mobx": "^4.2.0",
     "mobx-dispatcher": "^0.2.2",
-    "mobx-react": "^4.3.5",
-    "moment": "^2.20.1",
-    "normalize.css": "^7.0.0",
+    "mobx-react": "^5.0.0",
+    "moment": "^2.22.1",
+    "normalize.css": "^8.0.0",
     "numeral": "^2.0.6",
-    "prop-types": "^15.5.10",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-intl": "^2.4.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.0",
-    "url-search-params-polyfill": "^2.0.2"
+    "url-search-params-polyfill": "^3.0.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.8",
-    "@types/compression": "^0.0.35",
+    "@types/compression": "0.0.36",
     "@types/cookie-parser": "^1.4.1",
     "@types/core-js": "^0.9.46",
     "@types/d3-array": "^1.2.1",
-    "@types/d3-selection": "^1.2.0",
+    "@types/d3-selection": "^1.3.0",
     "@types/deep-assign": "^0.1.1",
-    "@types/express": "^4.11.0",
-    "@types/jest": "^22.1.0",
-    "@types/jquery": "^3.3.0",
-    "@types/jqueryui": "^1.12.1",
+    "@types/express": "^4.11.1",
+    "@types/jest": "^22.2.3",
+    "@types/jquery": "^3.3.1",
+    "@types/jqueryui": "^1.12.2",
     "@types/js-cookie": "^2.1.0",
-    "@types/loader-utils": "^1.1.1",
+    "@types/loader-utils": "^1.1.3",
     "@types/numeral": "^0.0.22",
     "@types/prop-types": "^15.5.2",
-    "@types/react": "^16.0.35",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-intl": "^2.3.3",
-    "@types/react-router": "^4.0.21",
-    "@types/react-router-dom": "^4.2.3",
-    "@types/webpack-env": "^1.13.3",
-    "electron": "^1.7.11",
-    "jest": "^22.1.4",
+    "@types/react": "^16.3.11",
+    "@types/react-dom": "^16.0.5",
+    "@types/react-intl": "^2.3.6",
+    "@types/react-router": "^4.0.23",
+    "@types/react-router-dom": "^4.2.6",
+    "@types/webpack-env": "^1.13.6",
+    "electron": "^1.8.4",
+    "jest": "^22.4.3",
     "pre-commit": "^1.2.2",
-    "ssenpack": "^2018.1.9",
-    "ts-jest": "^22.0.1",
+    "ssenpack": "^2018.1.17",
+    "ts-jest": "^22.4.3",
     "tslint": "^5.9.1",
-    "typescript": "^2.6.2"
+    "typescript": "^2.8.1"
   },
   "pre-commit": [
     "lint"
