--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "immer": "^1.3.1",
     "immutable": "4.0.0-rc.2",
     "js-cookie": "^2.2.0",
+    "luxon": "^1.3.0",
     "moment": "^2.22.2",
     "normalize.css": "^8.0.0",
     "numeral": "^2.0.6",
@@ -69,24 +70,25 @@
     "@types/d3-selection": "^1.3.1",
     "@types/deep-assign": "^0.1.1",
     "@types/express": "^4.16.0",
-    "@types/jest": "^23.1.1",
+    "@types/jest": "^23.1.3",
     "@types/jquery": "^3.3.4",
     "@types/jqueryui": "^1.12.2",
     "@types/js-cookie": "^2.1.0",
     "@types/loader-utils": "^1.1.3",
+    "@types/luxon": "^1.2.0",
     "@types/numeral": "^0.0.22",
     "@types/prop-types": "^15.5.3",
-    "@types/react": "^16.4.1",
+    "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
     "@types/react-intl": "^2.3.8",
-    "@types/react-router": "^4.0.26",
+    "@types/react-router": "^4.0.27",
     "@types/react-router-dom": "^4.2.7",
     "@types/webpack-env": "^1.13.6",
-    "electron": "^2.0.2",
-    "jest": "^23.1.0",
+    "electron": "^2.0.3",
+    "jest": "^23.2.0",
     "pre-commit": "^1.2.2",
     "ssenpack": "^2018.3.1",
-    "ts-jest": "^22.4.6",
+    "ts-jest": "^23.0.0",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
   },
