Update ssenpack, seed 2018.4

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ssenkit",
-  "version": "2018.2.0",
+  "version": "2018.4.0",
   "description": "SSen's toolkits",
   "scripts": {
     "libs.build": "ssenpack libs.build",
@@ -9,7 +9,6 @@
     "web.build": "ssenpack web.build",
     "web.dev.build": "ssenpack web.dev.build",
     "web.dev.start": "ssenpack web.dev.start",
-    "web.dll.build": "ssenpack web.dll.build",
     "web.server.build": "ssenpack web.server.build",
     "web.server.dev.build": "ssenpack web.server.dev.build",
     "web.server.dev.build.watch": "ssenpack web.server.dev.build.watch",
@@ -21,7 +20,8 @@
     "web.git.publish": "git subtree push --prefix dist/web origin subtree/web",
     "web.server.git.publish": "git subtree push --prefix dist/server origin subtree/server",
     "git.publish": "npm run web.git.publish && npm run web.server.git.publish",
-    "lint": "tslint 'src/**/!(*.spec|*.test).ts?(x)'"
+    "lint": "tslint 'src/**/!(*.spec|*.test).ts?(x)'",
+    "download-resources": "sh scripts.sh download-resources"
   },
   "license": "MIT",
   "repository": {
@@ -48,7 +48,7 @@
     "immer": "^1.3.1",
     "immutable": "4.0.0-rc.2",
     "js-cookie": "^2.2.0",
-    "luxon": "^1.3.0",
+    "luxon": "^1.3.1",
     "moment": "^2.22.2",
     "normalize.css": "^8.0.0",
     "numeral": "^2.0.6",
@@ -58,7 +58,6 @@
     "react-intl": "^2.4.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "recontext": "^0.2.2",
     "url-search-params-polyfill": "^4.0.0"
   },
   "devDependencies": {
@@ -70,24 +69,24 @@
     "@types/d3-selection": "^1.3.1",
     "@types/deep-assign": "^0.1.1",
     "@types/express": "^4.16.0",
-    "@types/jest": "^23.1.3",
+    "@types/jest": "^23.1.4",
     "@types/jquery": "^3.3.4",
     "@types/jqueryui": "^1.12.2",
     "@types/js-cookie": "^2.1.0",
     "@types/loader-utils": "^1.1.3",
-    "@types/luxon": "^1.2.0",
+    "@types/luxon": "^1.2.1",
     "@types/numeral": "^0.0.22",
     "@types/prop-types": "^15.5.3",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
     "@types/react-intl": "^2.3.8",
-    "@types/react-router": "^4.0.27",
+    "@types/react-router": "^4.0.28",
     "@types/react-router-dom": "^4.2.7",
     "@types/webpack-env": "^1.13.6",
-    "electron": "^2.0.3",
-    "jest": "^23.2.0",
+    "electron": "^2.0.4",
+    "jest": "^23.3.0",
     "pre-commit": "^1.2.2",
-    "ssenpack": "^2018.3.1",
+    "ssenpack": "^2018.4.0",
     "ts-jest": "^23.0.0",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
