Update layout style

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   },
   "homepage": "https://github.com/iamssen/ssenkit",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.1",
+    "@fortawesome/free-solid-svg-icons": "^5.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.7",
@@ -58,7 +61,7 @@
     "react-intl": "^2.4.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "url-search-params-polyfill": "^4.0.0"
+    "url-search-params-polyfill": "^4.0.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
@@ -69,26 +72,26 @@
     "@types/d3-selection": "^1.3.1",
     "@types/deep-assign": "^0.1.1",
     "@types/express": "^4.16.0",
-    "@types/jest": "^23.1.5",
+    "@types/jest": "^23.3.0",
     "@types/jquery": "^3.3.4",
     "@types/jqueryui": "^1.12.2",
     "@types/js-cookie": "^2.1.0",
     "@types/loader-utils": "^1.1.3",
     "@types/luxon": "^1.2.1",
-    "@types/numeral": "^0.0.22",
+    "@types/numeral": "0.0.23",
     "@types/prop-types": "^15.5.3",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
     "@types/react-intl": "^2.3.8",
-    "@types/react-router": "^4.0.28",
+    "@types/react-router": "^4.0.29",
     "@types/react-router-dom": "^4.2.7",
     "@types/webpack-env": "^1.13.6",
-    "electron": "^2.0.4",
-    "jest": "^23.3.0",
+    "electron": "^2.0.5",
+    "jest": "^23.4.1",
     "pre-commit": "^1.2.2",
-    "ssenpack": "^2018.4.0",
-    "ts-jest": "^23.0.0",
-    "tslint": "^5.10.0",
+    "ssenpack": "^2018.4.2",
+    "ts-jest": "^23.0.1",
+    "tslint": "^5.11.0",
     "typescript": "^2.9.2"
   },
   "pre-commit": [
