--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   },
   "homepage": "https://github.com/iamssen/ssenkit",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.4",
-    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
@@ -46,21 +46,22 @@
     "d3-array": "^1.2.4",
     "d3-selection": "^1.3.2",
     "deep-assign": "^2.0.0",
-    "express": "^4.16.3",
+    "dexie": "^2.0.4",
+    "express": "^4.16.4",
     "ie-shim": "^0.1.0",
-    "immer": "^1.7.2",
+    "immer": "^1.7.4",
     "immutable": "4.0.0-rc.2",
     "js-cookie": "^2.2.0",
     "mobx": "^4.5.0",
-    "mobx-react": "^5.2.8",
+    "mobx-react": "^5.3.6",
     "moment": "^2.22.2",
-    "moment-timezone": "^0.5.21",
+    "moment-timezone": "^0.5.23",
     "normalize.css": "^8.0.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-intl": "^2.7.0",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
+    "react-intl": "^2.7.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "url-search-params-polyfill": "^5.0.0"
@@ -70,31 +71,32 @@
     "@types/compression": "0.0.36",
     "@types/cookie-parser": "^1.4.1",
     "@types/core-js": "^2.5.0",
-    "@types/d3-array": "^1.2.2",
-    "@types/d3-selection": "^1.3.2",
+    "@types/d3-array": "^1.2.4",
+    "@types/d3-selection": "^1.3.3",
     "@types/deep-assign": "^0.1.1",
     "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.2",
-    "@types/jquery": "^3.3.10",
-    "@types/jqueryui": "^1.12.4",
+    "@types/jest": "^23.3.9",
+    "@types/jquery": "^3.3.22",
+    "@types/jqueryui": "^1.12.6",
     "@types/js-cookie": "^2.2.0",
     "@types/loader-utils": "^1.1.3",
     "@types/moment-timezone": "^0.5.9",
     "@types/numeral": "0.0.25",
     "@types/prop-types": "^15.5.6",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.8",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
     "@types/react-intl": "^2.3.11",
-    "@types/react-router": "^4.0.31",
+    "@types/react-router": "^4.4.1",
     "@types/react-router-dom": "^4.3.1",
     "@types/webpack-env": "^1.13.6",
-    "electron": "^3.0.2",
+    "electron": "^3.0.8",
     "jest": "^23.6.0",
     "pre-commit": "^1.2.2",
     "ssenpack": "^2018.4.6",
-    "ts-jest": "^23.10.3",
+    "ssenpack.tslint-rules": "0.0.1",
+    "ts-jest": "^23.10.4",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.1"
+    "typescript": "^3.1.6"
   },
   "pre-commit": [
     "lint"
