--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,6 @@
 {
+  "extends": "react-zeroconfig/configs/tsconfig",
   "compilerOptions": {
-    
-    // language setting
-    // -------------------------------
-    "jsx": "react",
-    "experimentalDecorators": true,
-    "allowJs": false,
-    "downlevelIteration": true,
-    "importHelpers": true,
-    // import * as module from 'module' -> import module from 'module'
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    
-    // strict
-    // -------------------------------
-    "alwaysStrict": true,
-    "strictNullChecks": true,
-    "strictBindCallApply": true,
-    "strictFunctionTypes": false,
-    "strictPropertyInitialization": true,
-    
-    // export setting
-    // -------------------------------
-    "module": "esnext",
-    "target": "es5",
-    "moduleResolution": "node",
-    "skipLibCheck": true,
-    "sourceMap": true,
-    
-    // lib
-    // -------------------------------
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    
-    // paths
-    // -------------------------------
     "baseUrl": "src",
     "paths": {
       "*": [
