--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "history": "^4.7.2",
     "immer": "^1.10.5",
     "js-cookie": "^2.2.0",
+    "locale-code": "^2.0.1",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
     "node-fetch": "^2.3.0",
@@ -110,7 +111,7 @@
     "mkdirp": "^0.5.1",
     "multiplerun": "^0.1.4",
     "pre-commit": "^1.2.2",
-    "react-zeroconfig": "^1.3.8",
+    "react-zeroconfig": "^1.3.9",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "tslint-ssen-rules": "^1.0.2",
