--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "lint": "tslint \"src/**/!(*.spec|*.test).ts?(x)\"",
     "git.publish.web": "git subtree push --prefix dist/web origin dist/web",
     "git.publish.ssr": "git subtree push --prefix dist/ssr origin dist/ssr",
-    "git.publish.ghpages": "git subtree push --prefix dist/web origin gh-pages",
-    "git.publish": "npm run git.publish.web && npm run git.publish.ssr && npm run git.publish.ghpages"
+    "git.publish": "npm run git.publish.web && npm run git.publish.ssr",
+    "surge.publish": "surge dist/web"
   },
   "multiplerun": {
     "development": [
@@ -114,6 +114,7 @@
     "multiplerun": "^0.1.4",
     "pre-commit": "^1.2.2",
     "react-zeroconfig": "^1.3.11",
+    "surge": "^0.20.1",
     "tslint": "^5.12.1",
     "tslint-ssen-rules": "^1.0.2",
     "typescript": "^3.3.1"
