--- a/package.json
+++ b/package.json
@@ -58,13 +58,14 @@
   },
   "homepage": "https://github.com/iamssen/ssenkit",
   "dependencies": {
+    "antd": "^3.13.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "d3-array": "^2.0.2",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "history": "^4.7.2",
-    "immer": "^1.10.5",
+    "immer": "^2.0.0",
     "immutable": "^4.0.0-rc.12",
     "js-cookie": "^2.2.0",
     "locale-code": "^2.0.1",
@@ -113,7 +114,7 @@
     "mkdirp": "^0.5.1",
     "multiplerun": "^0.1.4",
     "pre-commit": "^1.2.2",
-    "react-zeroconfig": "^1.3.11",
+    "react-zeroconfig": "^1.3.13",
     "surge": "^0.20.1",
     "tslint": "^5.12.1",
     "tslint-ssen-rules": "^1.0.2",
