--- a/package.json
+++ b/package.json
@@ -58,14 +58,14 @@
   },
   "homepage": "https://github.com/iamssen/ssenkit",
   "dependencies": {
-    "antd": "^3.13.0",
+    "antd": "^3.15.0",
     "body-parser": "^1.18.3",
-    "cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.4",
     "d3-array": "^2.0.2",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "history": "^4.7.2",
-    "immer": "^2.0.0",
+    "immer": "^2.1.1",
     "immutable": "^4.0.0-rc.12",
     "js-cookie": "^2.2.0",
     "locale-code": "^2.0.1",
@@ -75,10 +75,10 @@
     "node-fetch": "^2.3.0",
     "numeral": "^2.0.6",
     "prismjs": "^1.15.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.0-alpha.1",
-    "react-app-polyfill": "^0.2.0",
-    "react-dom": "^16.8.0-alpha.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.4",
+    "react-app-polyfill": "^0.2.2",
+    "react-dom": "^16.8.4",
     "react-intl": "^2.8.0",
     "react-markdown": "^4.0.6",
     "react-router": "^4.4.0-beta.6",
@@ -91,34 +91,34 @@
     "@types/compression": "0.0.36",
     "@types/cookie-parser": "^1.4.1",
     "@types/core-js": "^2.5.0",
-    "@types/d3-array": "^1.2.5",
-    "@types/ejs": "^2.6.1",
+    "@types/d3-array": "^1.2.6",
+    "@types/ejs": "^2.6.3",
     "@types/express": "^4.16.0",
     "@types/history": "^4.7.2",
-    "@types/jest": "^23.3.13",
-    "@types/js-cookie": "^2.2.0",
+    "@types/jest": "^24.0.9",
+    "@types/js-cookie": "^2.2.1",
     "@types/loader-utils": "^1.1.3",
     "@types/mkdirp": "^0.5.2",
-    "@types/moment-timezone": "^0.5.9",
-    "@types/node-fetch": "^2.1.4",
+    "@types/moment-timezone": "^0.5.11",
+    "@types/node-fetch": "^2.1.6",
     "@types/numeral": "0.0.25",
-    "@types/prismjs": "^1.9.0",
-    "@types/prop-types": "^15.5.8",
-    "@types/react": "^16.8.1",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-intl": "^2.3.15",
-    "@types/react-router": "^4.4.3",
+    "@types/prismjs": "^1.9.1",
+    "@types/prop-types": "^15.7.0",
+    "@types/react": "^16.8.7",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-intl": "^2.3.17",
+    "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.1",
-    "@types/webpack-env": "^1.13.7",
-    "jest": "^24.0.0",
+    "@types/webpack-env": "^1.13.9",
+    "jest": "^24.3.1",
     "mkdirp": "^0.5.1",
-    "multiplerun": "^0.1.4",
+    "multiplerun": "^0.2.1",
     "pre-commit": "^1.2.2",
     "react-zeroconfig": "^1.3.15",
     "surge": "^0.20.1",
-    "tslint": "^5.12.1",
-    "tslint-ssen-rules": "^1.0.2",
-    "typescript": "^3.3.1"
+    "tslint": "^5.13.1",
+    "tslint-ssen-rules": "^1.1.0",
+    "typescript": "^3.3.3333"
   },
   "pre-commit": [
     "test",
