--- a/package.json
+++ b/package.json
@@ -9,38 +9,38 @@
     "web.dev.build": "zeroconfig web.dev.build",
     "web.dev.build.watch": "zeroconfig web.dev.build.watch",
     "web.dev.start": "zeroconfig web.dev.start",
-    "web.ssr.build": "zeroconfig web.ssr.build",
-    "web.ssr.dev.build": "zeroconfig web.ssr.dev.build",
-    "web.ssr.dev.build.watch": "zeroconfig web.ssr.dev.build.watch",
-    "web.ssr.dev.start": "zeroconfig web.ssr.dev.start",
+    "web.server.build": "zeroconfig web.server.build",
+    "web.server.dev.build": "zeroconfig web.server.dev.build",
+    "web.server.dev.build.watch": "zeroconfig web.server.dev.build.watch",
+    "web.server.dev.start": "zeroconfig web.server.dev.start",
     "translation.build": "zeroconfig intl.build",
     "translation.build.watch": "zeroconfig intl.build.watch",
     "translation.distribute": "zeroconfig intl.distribute",
     "template.build": "zeroconfig template.build",
     "resource.download": "node ./resource.download",
     "generate": "npm run resource.download && npm run translation.build && npm run template.build",
-    "build": "npm run generate && npm run web.build && npm run web.ssr.build && npm run module.build",
+    "build": "npm run generate && npm run web.build && npm run web.server.build && npm run module.build",
     "start": "npm run generate && multiplerun development",
     "start-translation": "npm run generate && multiplerun translation",
     "test": "jest",
     "lint": "tslint \"src/**/!(*.spec|*.test).ts?(x)\"",
     "git.publish.web": "git subtree push --prefix dist/web origin dist/web",
-    "git.publish.ssr": "git subtree push --prefix dist/ssr origin dist/ssr",
-    "git.publish": "npm run git.publish.web && npm run git.publish.ssr",
+    "git.publish.server": "git subtree push --prefix dist/server origin dist/server",
+    "git.publish": "npm run git.publish.web && npm run git.publish.server",
     "surge.publish": "surge dist/web"
   },
   "multiplerun": {
     "development": [
       [
-        "npm run web.ssr.dev.build.watch",
-        "npm run web.ssr.dev.start"
+        "npm run web.server.dev.build.watch",
+        "npm run web.server.dev.start"
       ],
       "npm run web.dev.start"
     ],
     "translation": [
       [
-        "npm run web.ssr.dev.build.watch",
-        "npm run web.ssr.dev.start"
+        "npm run web.server.dev.build.watch",
+        "npm run web.server.dev.start"
       ],
       [
         "npm run web.dev.start",
@@ -58,17 +58,17 @@
   },
   "homepage": "https://github.com/iamssen/ssenkit",
   "dependencies": {
-    "antd": "^3.15.0",
+    "antd": "^3.15.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "d3-array": "^2.0.2",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "history": "^4.7.2",
-    "immer": "^2.1.1",
+    "history": "^4.9.0",
+    "immer": "^2.1.4",
     "immutable": "^4.0.0-rc.12",
     "js-cookie": "^2.2.0",
-    "locale-code": "^2.0.1",
+    "locale-code": "^2.0.2",
     "mobx": "^4.9.2",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
@@ -81,10 +81,10 @@
     "react-dom": "^16.8.4",
     "react-intl": "^2.8.0",
     "react-markdown": "^4.0.6",
-    "react-router": "^4.4.0-beta.6",
-    "react-router-dom": "^4.4.0-beta.6",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "url-search-params-polyfill": "^5.0.0",
-    "use-react-router": "^1.0.3"
+    "use-react-router": "^1.0.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
@@ -95,30 +95,30 @@
     "@types/ejs": "^2.6.3",
     "@types/express": "^4.16.0",
     "@types/history": "^4.7.2",
-    "@types/jest": "^24.0.9",
+    "@types/jest": "^24.0.11",
     "@types/js-cookie": "^2.2.1",
     "@types/loader-utils": "^1.1.3",
     "@types/mkdirp": "^0.5.2",
-    "@types/moment-timezone": "^0.5.11",
-    "@types/node-fetch": "^2.1.6",
+    "@types/moment-timezone": "^0.5.12",
+    "@types/node-fetch": "^2.1.7",
     "@types/numeral": "0.0.25",
     "@types/prismjs": "^1.9.1",
     "@types/prop-types": "^15.7.0",
-    "@types/react": "^16.8.7",
-    "@types/react-dom": "^16.8.2",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.3",
     "@types/react-intl": "^2.3.17",
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.1",
     "@types/webpack-env": "^1.13.9",
-    "jest": "^24.3.1",
+    "jest": "^24.5.0",
     "mkdirp": "^0.5.1",
     "multiplerun": "^0.2.1",
     "pre-commit": "^1.2.2",
-    "react-zeroconfig": "^1.3.15",
-    "surge": "^0.20.1",
-    "tslint": "^5.13.1",
+    "react-zeroconfig": "^2.0.14",
+    "surge": "^0.20.3",
+    "tslint": "^5.14.0",
     "tslint-ssen-rules": "^1.1.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.4000"
   },
   "pre-commit": [
     "test",
