--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "use-react-router": "^1.0.6"
   },
   "devDependencies": {
+    "@storybook/react": "^5.0.11",
     "@types/compression": "0.0.36",
     "@types/enzyme": "^3.9.2",
     "@types/enzyme-adapter-react-16": "^1.0.5",
@@ -96,6 +97,7 @@
     "@types/react-router": "^5.0.0",
     "@types/react-router-dom": "^4.3.3",
     "@types/react-test-renderer": "^16.8.1",
+    "@types/storybook__react": "^4.0.1",
     "@types/styled-components": "^4.1.15",
     "@types/webpack-env": "^1.13.9",
     "enzyme": "^3.9.0",
